# GLADOS-1

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
code/: consts.py  exceptions.py  train.py  utils.py
code/converters/: base_pango_converter.py  multiturn_converter.py  simple_grounding_converter.py  state_transition_converter.py
code/datasets/: compliance.py  grounding.py  state_transition.py
code/scripts/: build_script.sh
code/scripts/image_downloader/: go.mod  main.go
code/training/: checkpoint.py  helpers.py  minimal_finetune.py
example_data/: grounding_samples.json
tests/: test_grounding_converter.py  test_image_transformation.py  test_sequential_pairs.py  test_state_transition_converter.py
